# bureaucrat

./: Cargo.toml  README.md  derivation.nix  flake.nix  module.nix  package.nix
.github/: dependabot.yaml
.github/workflows/: ci.yaml
nixos-module/: default.nix
src/: main.rs
