[package]
name = "bureaucrat"
version = "0.1.0"
edition = "2021"

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", features = ["grpc", "locations"]} # tag = "v0.8.0"

# serde serialization / deserialization
serde_json = "1"
serde = { version = "1", features = ["derive"] }

redis = {version = "0.23", features = ["tokio", "r2d2", "cluster"]}

# utils
env_logger = "0"
log = "0"

tonic = "0.7"
prost = "0.10"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"
