[package]
name = "bureaucrat"
version = "0.1.0"
edition = "2021"

[dependencies]
tlms = { version = "0.10", git = "https://github.com/tlm-solutions/tlms.rs", features = ["grpc", "locations"]} # tag = "v0.8.0"

# serde serialization / deserialization
serde_json = "1"
serde = { version = "1", features = ["derive"] }

redis = {version = "0.32", features = ["r2d2"]}

# utils
env_logger = "0"
log = "0"

tonic = "0.14"
prost = "0.14"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.14"
